7.24
----
include/raytrace.h librt
	RT_DBHASH and RT_DBNHASH [deprecated 7.24]

7.22
----
include/raytrace.h librt
	nmg_model_break_e_on_v -> nmg_break_e_on_v [deprecation 7.22]

7.20
----
tclscripts/lib
	Mged, Database, Db, Dm, Drawable, Display, QuadDisplay, View -> Ged [deprecated 7.20]
librt
	bspline primitive [deprecated 7.20]
	poly primitive [deprecated 7.20]
	hf primitive [deprecated 7.20]
GNU Autotools configure compatibility script
	./configure -> cmake . [deprecated 7.20]

7.18
----
include/raytrace.h rt_comb_internal members
	region_id -> region_id attribute [deprecated 7.18]
	aircode -> air attribute [deprecated 7.18]
	GIFTmater -> material_id attribute [deprecated 7.18]
	los -> los attribute [deprecated 7.18]
bu.h xdr API
	BU_GLONGLONG() -> ntohll() [deprecated 7.18]
	BU_GLONG() -> ntohl() [deprecated 7.18]
	BU_GSHORT() -> ntohs() [deprecated 7.18]
	bu_gshort() -> ntohs() [deprecated 7.18]
	bu_glong() -> ntohl() [deprecated 7.18]
	bu_pshort() -> htons() [deprecated 7.18]
	bu_plong() -> htonl() [deprecated 7.18]
	bu_plonglong() -> htonll() [deprecated 7.18]
db.h
	rt_fastf_float() -> ntohf() [deprecated 7.18]
	rt_mat_dbmat() -> htonf() [deprecated 7.18]
	rt_dbmat_mat() -> ntohf() [deprecated 7.18]
mged
	?(*) -> ? -(*) [deprecated 7.18]
	apropos(*) -> apropos -(*) [deprecated 7.18]
	dbconcat -> db concat [deprecated 7.18]
	dbupgrade -> db upgrade [deprecated 7.18]
	dbversion -> db version [deprecated 7.18]
	dbfind -> search [deprecated 7.18]
	debug* -> debug [deprecated 7.18]
	comb_std -> comb [deprecated 7.18]
	comb_color -> comb [deprecated 7.18]
	combmem -> comb [deprecated 7.18]
	kill(*) -> kill [deprecated 7.18]
	rotobj -> rot [deprecated 7.18]
	qvrot -> rot -q -v [deprecated 7.18]
	qorot -> rot -q [deprecated 7.18]
	([amov])rot -> rot -([amv]) [deprecated 7.18]
	([op])scale -> sca -(p) [deprecated 7.18]
	([op])translate -> tra -(p) [deprecated 7.18]
	nmg_(*) -> nmg (*) [deprecated 7.18]
	bot_(*) -> bot (*) [deprecated 7.18]